--------------------------------------------------------------------------------------------------
Release notes version 1.9.1_beta : Enhancements, modifications and corrected bugs since version 1.9.0 :
--------------------------------------------------------------------------------------------------
24/10/22 (TRUST)  New option  : Post-processing can now be done on a sub-zone of the domain
19/10/22 (TRUST)  Portability : Cygwin build on Windows is supported (but not regularly tested yet)
19/10/22 (TRUST)  New keyword : Keyword "muscl_new" VEF convective scheme which really respect monotonicity contrary to "muscl" one, though at higher CPU cost for the moment: see QC_temperature_bounds_MUSCL validation sheet
19/10/22 (TRUST)  New solvers : Add rocALUTION library for CPU and/or AMD GPU (need ROCm 5.x recent environment). Syntax: solveur_pression rocALUTION gcp|gmres|... { precond ... { ... } seuil ... }
19/10/22 (TRUST)  Tool        : Syntax in datafile for medium, gravity, porosity, champ_fonc_MED* and Read_MED can be updated using command: trust -convert_data <datafile>
18/10/22 (TRUST)  Syntax      : Champ_Fonc_MED* keywords have a new syntax using { } and key/value pairs. See reference manual. Old syntax supported until 1.9.3.
17/10/22 (TRUST)  Syntax      : Previous 'diametre_hyd_champ' interpret is no more available. It is now read as part of the medium.
13/10/22 (TRUST)  Syntax      : Read_MED/Lire_MED has a new syntax using { } and key/value pairs. See reference manual. Old syntax supported until 1.9.3.
12/10/22 (TRUST)  Change      : Lata_V1 is not supported anymore. Only Lata_V2 (option 'lata') remains. Domain and Zone postprocessing in Lata_V2.
30/09/22 (TRUST)  New feature : Champ_Input_P0_Composite is now available and can be used to initialize the input field before starting the time scheme.