@@ -3,10 +3,6 @@ Version	Qui				Tache
 1.9.1   trust@cea.fr            correction xmax dans Octree_Double.cpp, cf mail de Luc. nb : ce fichier existe a 2 endroits : dans outils et dans src
 1.9.1   trust@cea.fr            empecher d'installer TRUST sur home titania
 1.9.1   trust@cea.fr            mise a jour tuto utilisateur/dev avec jupyter
-1.9.1   pierre.ledac@cea.fr	VisIt sur Ubuntu 22 (plugin med)
-1.9.1   pierre.ledac@cea.fr     [PETSC_AMGX] Corriger erreur valgrind sur machine gpu en mettant a jour AMGX*
-1.9.1   pierre.ledac@cea.fr     Modifier scripts Baltik pour qu un Baltik quelconque puisse etre deplace sans souci apres installation
-1.9.1 	pierre.ledac@cea.fr	Port muscl_new sur GPU avec OpenMP et optimisation du code (3 fois plus lent que muscl actuellement). Trouver nom adequat.
 1.9.1   anida.khizar@cea.fr     coder la resolution en increment dans le solveur_masse
 1.9.1   adrien.bruneton@cea.fr  Revoir installation de mpi4py au TGCC
 1.9.1   adrien.bruneton@cea.fr  Try to add Champ_Uniform into Champ_implementation_P0.cpp
@@ -15,7 +11,8 @@ Version	Qui				Tache
 1.9.1   adrien.bruneton@cea.fr  Nettoyer le vieux code med fichier
 1.9.1   adrien.bruneton@cea.fr  Revoir LireMED pour ne pas utiliser les familles mais que les groupes
 1.9.1   adrien.bruneton@cea.fr  Mettre dans un fichier separe la classe Champ_Fonc_MEDfile
-1.9.1   pierre.ledac@cea.fr     VisIt sur Ubuntu 22
+1.9.1   pierre.ledac@cea.fr     Modifier scripts Baltik pour qu un Baltik quelconque puisse etre deplace sans souci apres installation
+1.9.1 	pierre.ledac@cea.fr	    Port muscl_new sur GPU avec OpenMP et optimisation du code (3 fois plus lent que muscl actuellement). Trouver nom adequat.
 1.9.1   pierre.ledac@cea.fr     Supprimer OSQP dans le futur des que PolyMAC_old disparait
 1.9.1   trust@cea.fr            LDC: Decouper et lancer en parallele sur quelques pas de temps l etude de PE Canal_172M_PE_4913 sur un cluster
 1.9.1   trust@cea.fr            LDC: ouvrir une DI pour "Branches a integrer dans TRUST pour prochaine version 185" (cf DI 188128)
@@ -38,8 +35,6 @@ Version	Qui				Tache
 
 1.9.x   trust@cea.fr            empecher d'installer TRUST sur home titania
 1.9.x   trust@cea.fr            mise a jour tuto utilisateur/dev avec jupyter
-1.9.x   pierre.ledac@cea.fr	VisIt sur Ubuntu 22
-1.9.x   pierre.ledac@cea.fr     [PETSC_AMGX] Corriger erreur valgrind sur machine gpu en mettant a jour AMGX*
 1.9.x   pierre.ledac@cea.fr     Modifier scripts Baltik pour qu un Baltik quelconque puisse etre deplace sans souci apres installation
 1.9.x   anida.khizar@cea.fr     coder la resolution en increment dans le solveur_masse
 1.9.x   adrien.bruneton@cea.fr  Revoir installation de mpi4py au TGCC
@@ -50,10 +45,6 @@ Version	Qui				Tache
 1.9.x   adrien.bruneton@cea.fr  Revoir LireMED pour ne pas utiliser les familles mais que les groupes
 1.9.x   adrien.bruneton@cea.fr  Mettre dans un fichier separe la classe Champ_Fonc_MEDfile
 1.9.x   pierre.ledac@cea.fr     Passer les fichiers RELEASE_NOTE et DEVELOPER_NOTES en markdown licence.txt (voir si basculer aussi sur les Baltiks)
-1.9.x   pierre.ledac@cea.fr     Doxygen update + remove #ifdef DOXYGEN_SHOULD_SKIP_THIS from Eval_DiffF22_VDF_const_Elem.h
-1.9.x   pierre.ledac@cea.fr     Suppression LataV1 mais verifier que ecrire_lata (cas d usage dans fiche Part_Ss_Dom) fonctionne
-1.9.x   pierre.ledac@cea.fr     Corriger sources TRUST pour l'erreur valgrind ajoutee au fichier suppression le 11/12/18.
-1.9.x   pierre.ledac@cea.fr	Fedora 36 et GNU 11.?
 1.9.x   trust@cea.fr            LDC: Decouper et lancer en parallele sur quelques pas de temps l etude de PE Canal_172M_PE_4913 sur un cluster
 1.9.x   trust@cea.fr            LDC: ouvrir une DI pour "Branches a integrer dans TRUST pour prochaine version 185" (cf DI 188128)
 1.9.x   trust@cea.fr            LDC: ouvrir une DI pour actions de livraison (cf di 188127)
